채팅방 입장 시 채팅 기록 불러오기

--- a/src/css/adminStyle.css
+++ b/src/css/adminStyle.css
@@ -51,7 +51,7 @@ html, body {
     margin-right: 2rem;
 }
 
-.chat-name {
+.room-name {
     font-weight: 700;
     font-size: 1.5rem;
     flex: 7;
