--- a/src/css/style.css
+++ b/src/css/style.css
@@ -134,4 +134,16 @@ html, body {
 }
 
 
+/* Chrome, Safari */
+::-webkit-scrollbar {
+    width: 3px; /* 스크롤바의 너비 */
+}
 
+::-webkit-scrollbar-thumb {
+    background-color: #888; /* 스크롤바의 색상 */
+    border-radius: 4px; /* 스크롤바의 모서리 둥글게 */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* 스크롤바에 마우스 오버했을 때의 색상 */
+}
