--- a/src/css/style.css
+++ b/src/css/style.css
@@ -147,3 +147,18 @@ html, body {
 ::-webkit-scrollbar-thumb:hover {
     background-color: #555; /* 스크롤바에 마우스 오버했을 때의 색상 */
 }
+
+
+.user-container button {
+    background-color: #ff0000;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.user-container button:hover {
+    background-color: #cc0000;
+}
