--- a/src/css/mainStyle.css
+++ b/src/css/mainStyle.css
@@ -58,22 +58,23 @@ body {
 
 /* 버튼 스타일 */
 #consultBtn {
-    background-color: #4CAF50; /* 배경색 설정 */
+    background-color: #f582ae; /* 배경색 설정 */
     border: none; /* 테두리 제거 */
     color: white; /* 글자색 설정 */
-    padding: 10px 20px; /* 패딩 설정 (상하 10px, 좌우 20px) */
+    padding: 12px 24px; /* 패딩 설정 (상하 12px, 좌우 24px) */
     text-align: center; /* 텍스트 중앙 정렬 */
     text-decoration: none; /* 텍스트 밑줄 제거 */
     display: inline-block; /* 인라인 요소로 배치 */
-    font-size: 16px; /* 글자 크기 설정 */
-    border-radius: 20px; /* 모서리를 둥글게 처리 */
+    font-size: 18px; /* 글자 크기 설정 */
+    border-radius: 30px; /* 모서리를 둥글게 처리 */
     cursor: pointer; /* 커서 모양 변경 */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
     transition: background-color 0.3s ease; /* 배경색 변화 애니메이션 추가 */
 }
 
 /* 버튼에 마우스 호버 시 배경색 변경 */
 #consultBtn:hover {
-    background-color: #45a049; /* 호버 시 배경색 설정 */
+    background-color: #ff85cb; /* 호버 시 배경색 설정 */
 }
 
 /* 닫기 버튼 스타일 */
