--- a/src/css/style.css
+++ b/src/css/style.css
@@ -150,7 +150,7 @@ html, body {
 
 
 .user-container button {
-    background-color: #ff0000;
+    background-color: #e74c3c;
     color: #ffffff;
     border: none;
     padding: 10px 20px;
@@ -160,7 +160,7 @@ html, body {
 }
 
 .user-container button:hover {
-    background-color: #cc0000;
+    background-color: #c0392b;
 }
 
 #endChat {
