--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,6 +88,8 @@ html, body {
     margin-top: 0.5rem;
 }
 
+
+
 .profile {
     display: flex;
     flex-direction: column;
@@ -167,4 +169,22 @@ html, body {
     margin-left: 5rem;
     padding: 5px 10px; 
     font-size: 13px;
+}
+
+.System {
+    width: 50% !important; 
+    margin: 0 auto;  /* 중앙 정렬 */
+    text-align: center;  /* 텍스트를 가운데로 */
+}
+
+
+.message.system-message {
+    display: inline-block;
+    text-align: center;
+    background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 10px;
+    margin: 5px 0;
+    box-shadow: 0 3px 5px 2px rgba(255, 105, 135, 0.3);
 }
